high contrast fix in Sources tools panel

--- a/front_end/accessibility/accessibilityNode.css
+++ b/front_end/accessibility/accessibilityNode.css
@@ -69,3 +69,9 @@ span.ax-value-undefined {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+@media (forced-colors: active) {
+  .ax-value-source-unused {
+    opacity: 1;
+  }
+}
